<resources>
    <string name="app_name">WorldCapitalizer</string>
    <string name="start">Start</string>
    <string name="next">Next</string>
    <string name="start_text">Click button to begin</string>
    <string name="ask_capital">Ask Capital</string>
    <string name="previous_answer">Previous Answer</string>
    <string name="country_label">Country:</string>
    <string name="capital_label">Capital:</string>
    <string name="blank">-</string>
    <string name="ask_capital_label">What is the capital of…</string>
    <string name="ask_country_label">What country\'s capital is…</string>
    <string name="welcome_prompt">Welcome!</string>
</resources>
